--- a/BespokeBids/.gitignore
+++ b/BespokeBids/.gitignore
@@ -35,3 +35,19 @@ out/
 
 ### VS Code ###
 .vscode/
+
+### create-react-app ###
+.idea/
+.vscode/
+node_modules/
+build/
+.DS_Store
+*.tgz
+my-app*
+template/src/__tests__/__snapshots__/
+lerna-debug.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+/.changelog
+.npm/
