--- a/BespokeBids/src/main/reactfront/package.json
+++ b/BespokeBids/src/main/reactfront/package.json
@@ -7,11 +7,15 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-session-api": "^1.1.0",
+    "styled-components": "^6.0.0-rc.3",
     "web-vitals": "^2.1.4"
   },
-  "proxy" : "http://localhost:8080",
+  "proxy": "http://localhost:8080",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
