--- a/BespokeBids/src/main/resources/application.yml
+++ b/BespokeBids/src/main/resources/application.yml
@@ -2,8 +2,9 @@ spring:
   datasource:
     url: jdbc:h2:tcp://localhost/~/bespokebids; #MVCC=TRUE # h2??? 1.4.200??? ?? ???? ??? ??.
     username: sa
-    password:
+    password: 1234
     driver-class-name: org.h2.Driver
+
   servlet:
     multipart:
       max-file-size: 10MB
@@ -11,7 +12,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
     properties:
       hibernate:
         #show_sql: true
