--- a/reactfront/package.json
+++ b/reactfront/package.json
@@ -22,7 +22,8 @@
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
-    "zustand": "^4.3.8"
+    "zustand": "^4.3.8",
+    "zustand-persist": "^0.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
