--- a/BespokeBids/src/main/resources/application.yml
+++ b/BespokeBids/src/main/resources/application.yml
@@ -4,6 +4,7 @@ spring:
     username: sa
     password:
     driver-class-name: org.h2.Driver
+
   servlet:
     multipart:
       max-file-size: 10MB
@@ -11,7 +12,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: validate
+      ddl-auto: create
     properties:
       hibernate:
         #show_sql: true
