--- a/BespokeBids/src/main/resources/application.yml
+++ b/BespokeBids/src/main/resources/application.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
-    url: jdbc:h2:tcp://localhost/~/bespokebids; #MVCC=TRUE # h2??? 1.4.200??? ?? ???? ??? ??.
+    url: jdbc:h2:tcp://localhost/~/bespokebids
     username: sa
-    password:
+    password: 1234
     driver-class-name: org.h2.Driver
 
   servlet:
@@ -13,6 +13,7 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create
+      #ddl-auto: validate
     properties:
       hibernate:
         #show_sql: true
