--- a/reactfront/package.json
+++ b/reactfront/package.json
@@ -15,11 +15,12 @@
     "@types/react": "^18.2.8",
     "@types/react-dom": "^18.2.4",
     "axios": "^1.4.0",
+    "global": "^4.4.0",
     "react": "^18.2.0",
     "react-cookie": "^4.1.1",
     "react-daum-postcode": "^3.1.1",
     "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4",
     "zustand": "^4.3.8",
