--- a/BespokeBids/src/main/resources/application.yml
+++ b/BespokeBids/src/main/resources/application.yml
@@ -12,7 +12,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: validate
     properties:
       hibernate:
         #show_sql: true
